edits per feedback from mc

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -22,7 +22,7 @@ ifndef::backend-pdf[]
 *** xref:clients-rh.adoc[Red Hat Clients]
 **** xref:supported-features-rh.adoc[Red Hat Supported Features]
 *** xref:clients-centos.adoc[CentOS Clients]
-**** xref:supported-features-centos.adoc[CentOS Supported Features]
+//**** xref:supported-features-centos.adoc[CentOS Supported Features]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
 **** xref:supported-features-ubuntu.adoc[Ubuntu Supported Features]
 // Virtualization
@@ -96,7 +96,7 @@ include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/supported-features-rh.adoc[leveloffset=+3]
 
-include::modules/client-configuration/pages/clients-centos.adoc[leveloffset=+2]
+//include::modules/client-configuration/pages/clients-centos.adoc[leveloffset=+2]
 
 include::modules/client-configuration/pages/supported-features-centos.adoc[leveloffset=+3]
 
