--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -32,7 +32,7 @@ The icons in this table indicate:
 | Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"]
 | System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"]
 | Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH
-| {productname} Proxy | icon:check[role="green"] | icon:check[role="green"]
+| Works with {productname} Proxy | icon:check[role="green"] | icon:check[role="green"]
 | Action chains | icon:check[role="green"] | icon:check[role="green"]
 | Software crash reporting | icon:times[role="danger"] | ``Traditional``
 | Staging (pre-download of packages) | icon:check[role="green"] | icon:check[role="green"]
