--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -2,7 +2,7 @@
 = Supported Red Hat Features
 
 
-This table lists the availability of various features on {rhel} and {redhat} Expanded Support (RES) clients.
+This table lists the availability of various features on {rhel} and {sle} Expanded Support (ES) clients.
 
 The icons in this table indicate:
 
@@ -16,7 +16,7 @@ The icons in this table indicate:
 [cols="1,1,1,1,1", options="header"]
 .Supported Features on {rhel} Operating Systems
 |===
-| Feature | RES{nbsp}6 | RES{nbsp}7 | {rhel}{nbsp}6 | {rhel}{nbsp}8
+| Feature | ES{nbsp}6 | ES{nbsp}7 | {rhel}{nbsp}6 | {rhel}{nbsp}7
 | Client  | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Registration | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Install packages | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
@@ -32,7 +32,7 @@ The icons in this table indicate:
 | Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
 | Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH
-| {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Works with {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Action chains | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Software crash reporting | icon:times[role="danger"] | ``Traditional`` | icon:times[role="danger"] | ``Traditional``
 | Staging (pre-download of packages) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
@@ -48,7 +48,7 @@ The icons in this table indicate:
 | Power management |  icon:check[role="green"] | icon:check[role="green"] |  icon:check[role="green"] | icon:check[role="green"]
 | Monitoring |  ``Salt`` | ``Salt`` |  ``Salt`` | ``Salt``
 | Docker buildhost |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
-| Build Docker image with OS | icon:times[role="danger"] | icon:times[role="danger"] | ``Salt`` | ``Salt``
+| Build Docker image with OS | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"]
 | Kiwi buildhost |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
 | Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
 |===
