--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -35,9 +35,10 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 | {sle} 15 | {x86}_64, {ppc}, {ibmz}, ARM               | icon:check[role="green"]      | icon:check[role="green"]
 | {sle} 12 | {x86}_64, {ppc}, {ibmz}, ARM               | icon:check[role="green"]      | icon:check[role="green"]
 | {sle} 11 | {x86}, {x86}_64, {ipf}, IBM {ppc}, {ibmz}  | icon:check[role="green"]      | icon:check[role="green"]
+| {sls} for SAP | {x86}_64, {ppc}                       | icon:check[role="green"]      | icon:check[role="green"]
+| {sls}-ES 8 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
 | {sls}-ES 7 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
 | {sls}-ES 6 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
-| {sls} for SAP | {x86}_64, {ppc}                       | icon:check[role="green"]      | icon:check[role="green"]
 | {rhel} 8 | {x86}_64                                   | icon:question[role="gray"]    | icon:question[role="gray"]
 | {rhel} 7 | {x86}_64                                   | icon:check[role="green"]      | icon:check[role="green"]
 | {rhel} 6 | {x86}, {x86}_64                            | icon:check[role="green"]      | icon:check[role="green"]
@@ -49,9 +50,10 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 |===
 
 
-== Supported Client Features
+== Supported {suse} Client Features
 
 This table lists the availability of various features on {suse} clients.
+This table covers all variants of the {sle} operating system, including {slsa}, {sleda}, {sls} for SAP, and {sls} for HPC.
 
 For supported features on non-{suse} operating systems, see each operating system's section in this book.
 
@@ -83,9 +85,9 @@ The icons in this table indicate:
 | Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
-| {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
+| Works with {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Action chains | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
-| Software crash reporting | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"]
+| Software crash reporting | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"]
 | Staging (pre-download of packages)       |  icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | Duplicate package reporting | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
 | CVE auditing |  icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | ``Salt``
