--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -34,7 +34,7 @@ The icons in this table indicate:
 | Virtual guest installation ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
 | System redeployment ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
 | Contact methods | ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
-| {productname} Proxy | ``Salt`` | ``Salt``
+| Works with {productname} Proxy | ``Salt`` | ``Salt``
 | Action chains | ``Salt`` | ``Salt``
 | Software crash reporting | icon:times[role="danger"] | icon:times[role="danger"]
 | Staging (pre-download of packages) |  icon:times[role="danger"] | icon:times[role="danger"]
