--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -38,7 +38,7 @@ For details on supported product versions, see https://www.suse.com/lifecycle.
 | {sls} for SAP | {x86}_64, {ppc}                       | icon:check[role="green"]      | icon:check[role="green"]
 | {sls}-ES 8 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
 | {sls}-ES 7 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
-| {sls}-ES 6 | {x86}_64                                 | icon:check[role="green"]      | icon:check[role="green"]
+| {sls}-ES 6 | {x86}, {x86}_64                          | icon:check[role="green"]      | icon:check[role="green"]
 | {rhel} 8 | {x86}_64                                   | icon:question[role="gray"]    | icon:question[role="gray"]
 | {rhel} 7 | {x86}_64                                   | icon:check[role="green"]      | icon:check[role="green"]
 | {rhel} 6 | {x86}, {x86}_64                            | icon:check[role="green"]      | icon:check[role="green"]
