--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -100,7 +100,7 @@ The icons in this table indicate:
 | Package profiles |  ``Traditional``. ``Salt``: Profiles supported, Sync not supported | ``Traditional``. ``Salt``: Profiles supported, Sync not supported | ``Traditional``. ``Salt``: Profiles supported, Sync not supported | ``Salt``: Profiles supported, Sync not supported
 | Power management |  icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Monitoring |   icon:question[role="gray"]     | ``Salt`` | ``Salt`` | ``Salt``
-| Docker buildhost |  icon:times[role="danger"]     | ``Salt`` | ``Salt`` | icon:times[role="danger"]
+| Docker buildhost |  icon:times[role="danger"]     | ``Salt`` | ``Salt`` | icon:question[role="gray"]
 | Build Docker image with OS | icon:times[role="danger"]  | ``Salt`` | ``Salt`` | ``Salt``
 | Kiwi buildhost |   icon:times[role="danger"]     | ``Salt``  | icon:question[role="gray"] | icon:question[role="gray"]
 | Build Kiwi image with OS |  icon:times[role="danger"]     | ``Salt``  | icon:question[role="gray"] | icon:times[role="danger"]
