--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -22,15 +22,15 @@ image::ports_diagram.png[]
 | 69          | Inbound   | TCP/UDP  | TFTP | Required if server is used as a PXE server for automated client installation.
 | 80          | Inbound   | TCP      | HTTP | Required temporarily for some bootstrap repositories and automated installations.
 Port 80 is not used to serve the {webui}.
-| 80          | Outbound  | TCP      | HTTP | Used to contact {scc}.
+| 80          | Outbound  | TCP      | HTTP | Required for {scc}.
 | 443         | Inbound   | TCP      | HTTPS | {webui}, client, and proxy requests.
-| 443         | Outbound  | TCP      | HTTPS | Used to contact {scc}.
+| 443         | Outbound  | TCP      | HTTPS | Required for {scc}.
 | 4505         | Inbound  | TCP | salt | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to receive commands from the Salt master.
 | 4506        | Inbound  | TCP | salt | Required to accept communication requests from clients.
 The client initiates the connection, and it stays open to report results back to the Salt master.
 | 5222        | Inbound   | TCP      | osad  | Required to push OSAD actions to clients.
-| 5269        | Inbound/Outbound | TCP | jabberd | Required to push actions to a proxy.
+| 5269        | Inbound/Outbound | TCP | jabberd | Required to push actions to and from a proxy.
 | 8050         | Inbound | TCP | websockify | Required to access the graphical console of virtual machines with the {webui}.
 | 25151        |         | TCP | Cobbler |
 |===
@@ -51,12 +51,18 @@ The client initiates the connection, and it stays open to report results back to
 | 8009        | Tomcat to Apache HTTPD (AJP).
 | 8080        | Tomcat to Apache HTTPD (HTTP).
 | 9080        | Salt-API, used by the RHN application in Tomcat and Taskomatic.
-| 32000       | Port for a TCP connection to the Java Virtual Machine (JVM) that runs Taskomatic and the search (satellite-search).
+| 32000       | Port for a TCP connection to the Java Virtual Machine (JVM) that runs Taskomatic and satellite-search.
 |===
 
 
-Anything from port 32768 on (more exactly, what you can see with [command]``cat /proc/sys/net/ipv4/ip_local_port_range``) is an ephemeral port, typically used as the receiving end of a TCP connection.
-So if process A opens a TCP connection to process B (for example, port 22), then A chooses an arbitrary source TCP port to match with destination port 22.
+Port 32768 and higher are used as ephemeral ports.
+These are most often used to receive TCP connections.
+When a TCP connection request is received, the sender will choose one of these ephemeral port numbers to match the destination port.
+You can use this command to find out which ports are ephemeral ports:
+
+----
+cat /proc/sys/net/ipv4/ip_local_port_range
+----
 
 
 
@@ -66,22 +72,19 @@ So if process A opens a TCP connection to process B (for example, port 22), then
 .External Port Requirements for {productname} Proxy
 |===
 | Port number | Direction | Protocol | Used By | Notes
-| 22          | Inbound   |          | | Required when using ssh-push or ssh-push-tunnel contact methods.
-Check-in on clients connected to a {productname} Proxy will be initiated on the {productname} Server and "`hop through`" through to clients.
-| 67          | Inbound   | TCP/UDP  | DHCP    | Required when {productname} is configured as a DHCP server for systems requesting IP addresses.
-| 69          | Inbound   | TCP/UDP  | TFTP | Used when {productname} is configured as a PXE server and allows installation and re-installation of PXE-boot enabled systems.
-| 80          | Outbound  |           | | Used to reach {productname}.
-| 443         | Inbound   | TCP      | HTTPS | All {webui}, client, and proxy server requests travel via HTTP or HTTPS.
-| 443         | Outbound  | TCP      | HTTPS | {productname} uses this port to reach {scc} (unless running in a disconnected mode with RMT or SMT{mdash}as described in <<disconnect-setup>>)
-| 4505         | Inbound  | TCP | salt | Required by the Salt-master to accept communication requests via TCP from clients.
-The connection is initiated by the client and remains open to allow the master to send commands.
-This port uses a publish/subscribe topology; the client subscribes to notifications from the master.
-| 4506        | Inbound  | TCP | salt | Required by the Salt-master to accept communication requests via TCP from clients.
-The connection is initiated by the client and is open only when needed.
-Usually, clients will open this port when they have to report results to the master, such as when a command received on port 4505 has finished.
-This port uses a request/response topology; the client sends requests to the master.
-| 5222        | Inbound   | TCP     |  | For push actions and connections issued by [systemitem]``osad`` running on the client systems.
-| 5269        | Inbound/Outbound | TCP | | For push actions with the server.
+| 22          | Inbound   |          | | Required for ssh-push and ssh-push-tunnel contact methods.
+Clients connected to the proxy initiate check in on the server and hop through to clients.
+| 67          | Inbound   | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
+| 69          | Inbound   | TCP/UDP  | TFTP | Required if server is used as a PXE server for automated client installation.
+| 80          | Outbound  |           | | Used to reach the server.
+| 443         | Inbound   | TCP      | HTTPS | {webui}, client, and proxy requests.
+| 443         | Outbound  | TCP      | HTTPS | Required for {scc}.
+| 4505         | Inbound  | TCP | salt | Required to accept communication requests from clients.
+The client initiates the connection, and it stays open to receive commands from the Salt master.
+| 4506        | Inbound  | TCP | salt | Required to accept communication requests from clients.
+The client initiates the connection, and it stays open to report results back to the Salt master.
+| 5222        | Inbound   | TCP     |  | Required to push OSAD actions to clients.
+| 5269        | Inbound/Outbound | TCP | | Required to push actions to and from the server.
 |===
 
 
@@ -92,7 +95,7 @@ This port uses a request/response topology; the client sends requests to the mas
 .External Port Requirements for {productname} Clients
 |===
 | Port number | Direction | Protocol | Notes
-| 22          | Inbound   | SSH      | Required when using ssh-push or ssh-push-tunnel contact methods.
-| 80          | Outbound  |          | To reach the {productname} server or {susemgrproxy} server.
-| 5222        | Outbound  | TCP      | For push actions with the server or proxy server.
+| 22          | Inbound   | SSH      | Required for ssh-push and ssh-push-tunnel contact methods.
+| 80          | Outbound  |          | Used to reach the server or proxy.
+| 5222        | Outbound  | TCP      | Required to push OSAD actions to the server or proxy.
 |===
