Updated nav & title

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -7,6 +7,7 @@ ifndef::backend-pdf[]
 *** xref:general-requirements.adoc[General Requirements]
 *** xref:hardware-requirements.adoc[Hardware Requirements]
 *** xref:network-requirements.adoc[Network Requirements]
+**** xref:ports.adoc[Required Network Ports]
 *** xref:client-requirements.adoc[Supported Clients]
 *** xref:pubcloud-requirements.adoc[Public Cloud Requirements]
 ** Installation
@@ -54,6 +55,8 @@ include::modules/installation/pages/hardware-requirements.adoc[leveloffset=+2]
 
 // Network Requirements
 include::modules/installation/pages/network-requirements.adoc[leveloffset=+2]
+
+include::modules/installation/pages/ports.adoc[leveloffset=+3]
 
 // Client Requirements
 include::modules/installation/pages/client-requirements.adoc[leveloffset=+2]
