initial copy of source data

--- a/modules/client-configuration/pages/vhm-aws.adoc
+++ b/modules/client-configuration/pages/vhm-aws.adoc
@@ -5,3 +5,14 @@ You can use a {productname} VHM to manage Amazon Web Services (AWS) clusters.
 
 The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
+
+
+
+# AWS related variables
+AWS_ACCESS_KEY_ID = "EXAMPLE"
+AWS_SECRET_ACCESS_KEY = "EXAMPLE"
+AWS_REGION = "EXAMPLE"
+
+The instances running on the Public Cloud that are registered on SUSE Manager, will report the UUID reported by the specific Public Cloud provider:
+
+AWS EC2: i-1234567890abcdef0
