--- a/modules/client-configuration/pages/vhm-azure.adoc
+++ b/modules/client-configuration/pages/vhm-azure.adoc
@@ -5,3 +5,16 @@ You can use a {productname} VHM to manage Microsoft Azure clusters.
 
 The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
+
+
+
+# Azure related variables
+AZURE_SUBSCRIPTION_ID = "EXAMPLE"
+AZURE_APPLICATION_ID = "EXAMPLE"
+AZURE_TENANT_ID = "EXAMPLE"
+AZURE_SECRET_KEY = "EXAMPLE"
+
+
+The instances running on the Public Cloud that are registered on SUSE Manager, will report the UUID reported by the specific Public Cloud provider:
+
+Azure: 13f56399-bd52-4150-9748-7190aae1ff21
