--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -5,3 +5,14 @@ You can use a {productname} VHM to manage Google Compute Engine (GCE) clusters.
 
 The VHM allows {productname} to obtain and report information about your clusters, including the ability to do CVE audits, and report if containers are outdated.
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
+
+
+
+# GCE related variables
+GOOGLE_SERVICE_ACCOUNT_EMAIL = "EXAMPLE"
+GOOGLE_CERT_PATH = "/foo/bar/example.json"   <-- This file is downloaded from Google CE panel and should be placed on a path inside the SUSE MAnager server.
+GOOGLE_PROJECT_ID = "EXAMPLE"
+
+The instances running on the Public Cloud that are registered on SUSE Manager, will report the UUID reported by the specific Public Cloud provider:
+
+GCE: 152986662232938449
