--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -3,7 +3,7 @@
 
 Virtual Host Managers (VHMs) are used to gather information from a range of client types.
 
-You can use a VHM to manage public cloud instances that are not directly supported by {productname}.
+You can use a VHM to communicate with public cloud instances that are not directly supported by {productname}.
 You can also use a VHM to manage clusters created with {k8s} and {caasp}.
 
 //For more information on using a VHM with Microsoft Azure, see xref:client-configuration:vhm-azure.adoc[].
@@ -16,6 +16,13 @@ For more information on using a VHM with {k8s}, see xref:client-configuration:vh
 
 You can create a VHM on your {productname} Server, and inventory the available clients.
 Taskomatic manages data collection on the client.
+
+
+- This new feature allows to collect your Public Cloud instances and then provide Virtualization Groups that are needed while running "Subscription Matching" in order to provide a successful matching of "1-2 virtual machines" subscriptions.
+
+
+
+* In order to have these new modules available for "virtual-host-gatherer" (and therefore, on the UI), it's needed to install "virtual-host-gatherer-libcloud" package
 
 
 == VHM Setup
@@ -36,3 +43,8 @@ To run a VHM, your {productname} Server will need to have port 443 open, in orde
 . On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
 
 To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
+
+
+
+
+* When adding a VHM for a Public Cloud provider, SUMA will also ask you to provide the "ZONE" to gather instances from. This is needed, because according to SUSE Terms & Conditions, the "1-2 virtual machines" subscription will only apply when instances are running within the same public cloud zone [1]
