--- a/modules/client-configuration/pages/virt-file.adoc
+++ b/modules/client-configuration/pages/virt-file.adoc
@@ -11,6 +11,9 @@ This option is for importing files that have been created with the [command]``vi
 It is not designed for manually created files.
 ====
 
+// Add instructions for custom JSON file, including example if possible. LKB 2019-10-23
+// https://github.com/uyuni-project/uyuni-rfc/blob/master/accepted/00056-subscription-matching-in-public-clouds.md#the-output-from-a-virtual-host-gatherer-plugin
+
 
 .Procedure: Exporting and Importing a JSON File
 
