--- a/modules/installation/pages/ports.adoc
+++ b/modules/installation/pages/ports.adoc
@@ -75,7 +75,7 @@ cat /proc/sys/net/ipv4/ip_local_port_range
 | 22          | Inbound   |          | | Required for ssh-push and ssh-push-tunnel contact methods.
 Clients connected to the proxy initiate check in on the server and hop through to clients.
 | 67          | Inbound   | TCP/UDP  | DHCP    | Required only if clients are requesting IP addresses from the server.
-| 69          | Inbound   | TCP/UDP  | TFTP | Required if server is used as a PXE server for automated client installation.
+| 69          | Inbound   | TCP/UDP  | TFTP | Required if the server is used as a PXE server for automated client installation.
 | 80          | Outbound  |           | | Used to reach the server.
 | 443         | Inbound   | TCP      | HTTPS | {webui}, client, and proxy requests.
 | 443         | Outbound  | TCP      | HTTPS | Required for {scc}.
