swap space recommendation

--- a/modules/installation/pages/hardware-requirements.adoc
+++ b/modules/installation/pages/hardware-requirements.adoc
@@ -22,6 +22,7 @@ For {smr} hardware requirements, see xref:retail:retail-requirements.adoc[].
 | Disk Space:              | [path]``/`` _(root)_ Minimum 24{nbsp}GB
 |                          | [path]``/var/lib/pgsql`` Minimum 50{nbsp}GB
 |                          | [path]``/var/spacewalk`` Minimum 50{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+| Swap space:               | 3{nbsp}GB
 |===
 
 [cols="1,1", options="header"]
@@ -35,6 +36,7 @@ For {smr} hardware requirements, see xref:retail:retail-requirements.adoc[].
 | Disk Space:              | [path]``/`` Minimum 100{nbsp}GB
 |                          | [path]``/var/lib/pgsql`` Minimum 50{nbsp}GB
 |                          | [path]``/var/spacewalk`` Minimum 50{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+| Swap space:               | 3{nbsp}GB
 |===
 
 
