--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -31,7 +31,7 @@ systemctl restart taskomatic
 
 == Import Entitlements and CA Certificate
 
-{redhat} clients require a {redhat} certificate authority (CA) and entitlement certificate and entitlemente key.
+{redhat} clients require a {redhat} certificate authority (CA) and entitlement certificate and entitlement key.
 
 Entitlement certificates are embedded with expiration dates, which match the length of the support subscription.
 To avoid disruption, you will need to repeat this process at the end of every support subscription period.
