--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -40,7 +40,8 @@ To avoid disruption, you will need to repeat this process at the end of every su
 It runs locally to track installed products and subscriptions.
 Clients must be registered with the subscription manager to obtain certificates.
 
-Depending on where the {redhat} system is registered, the URL’s to which the system is authorized to replicate differ.
+{redhat} clients use a URL to replicate repositories.
+The URL will change depending on where the {redhat} client is registered.
 
 {redhat} systems can be registered to three different infrastructures:
 
