--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -43,7 +43,7 @@ Clients must be registered with the subscription manager to obtain certificates.
 {redhat} clients use a URL to replicate repositories.
 The URL will change depending on where the {redhat} client is registered.
 
-{redhat} systems can be registered to three different infrastructures:
+{redhat} clients can be registered in three different ways:
 
 1. {redhat} CDN (redhat.com)
 2. {redhat} Satellite Server
