--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -45,7 +45,7 @@ The URL will change depending on where the {redhat} client is registered.
 
 {redhat} clients can be registered in three different ways:
 
-1. {redhat} CDN (redhat.com)
+* {redhat} content delivery network (CDN) at redhat.com
 2. {redhat} Satellite Server
 3. RHUI (update infrastructure in the cloud)
 
