--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -46,7 +46,7 @@ The URL will change depending on where the {redhat} client is registered.
 {redhat} clients can be registered in three different ways:
 
 * {redhat} content delivery network (CDN) at redhat.com
-2. {redhat} Satellite Server
+* {redhat} Satellite Server
 3. RHUI (update infrastructure in the cloud)
 
 This guide focuses on a system registered to {redhat} CDN (redhat.com). Register at least one system there with an authorized subscription to obtain repository content.
