--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -49,7 +49,8 @@ The URL will change depending on where the {redhat} client is registered.
 * {redhat} Satellite Server
 3. RHUI (update infrastructure in the cloud)
 
-This guide focuses on a system registered to {redhat} CDN (redhat.com). Register at least one system there with an authorized subscription to obtain repository content.
+This guide covers clients registered to {redhat} CDN. 
+You must have at least one system registered to the CDN, with an authorized subscription for repository content.
 
 [IMPORTANT]
 ====
