--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -55,7 +55,8 @@ You must have at least one system registered to the CDN, with an authorized subs
 [IMPORTANT]
 ====
 Entitlement certificates for RHUI (cloud-based systems) only allow you to download content, not repository data.
-Satellite certificates for client systems require a Satellite server and subscription: such client certificates are UNSUPPORTED with {productname} server.
+Satellite certificates for client systems require a Satellite server and subscription.
+Clients using Satellite certificates are not supported with {productname} Server.
 ====
 
 [WARNING]
