--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -65,7 +65,9 @@ Entitlement certificates are embedded with expiration dates, which match the len
 To avoid disruption, you will need to repeat this process at the end of every support subscription period.
 ====
 
-{redhat} supplies the subscription-manager tool to manage subscription assignments. It runs locally on the client system to track installed products and subscriptions. Register to redhat.com with subscription-manager, then follow this procedure to obtain certificates.
+{redhat} supplies the subscription-manager tool to manage subscription assignments. 
+It runs locally on the client system to track installed products and subscriptions. 
+Register to redhat.com with subscription-manager, then follow this procedure to obtain certificates.
 
 
 .Procedure: Registering Clients to Subscription Manager
