--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -47,7 +47,7 @@ The URL will change depending on where the {redhat} client is registered.
 
 * {redhat} content delivery network (CDN) at redhat.com
 * {redhat} Satellite Server
-3. RHUI (update infrastructure in the cloud)
+* {redhat} update infrastructure (RHUI) in the cloud
 
 This guide covers clients registered to {redhat} CDN. 
 You must have at least one system registered to the CDN, with an authorized subscription for repository content.
