--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -80,28 +80,29 @@ For this step we provide script snippets that can be used.
 For Salt managed clients, use the `spacewalk/sle_register_salt` snippet:
 +
 ----
-  <scripts>
-    <init-scripts config:type="list">
-      $SNIPPET('spacewalk/sle_register_salt')
-    </init-scripts>
-  </scripts>
+<scripts>
+  <init-scripts config:type="list">
+    $SNIPPET('spacewalk/sle_register_salt')
+  </init-scripts>
+</scripts>
 ----
 +
 For traditional clients, use the `spacewalk/sles_register_script` snippet:
 +
 ----
-  <scripts>
-    <init-scripts config:type="list">
-      $SNIPPET('spacewalk/sles_register_script')
-    </init-scripts>
-  </scripts>
+<scripts>
+  <init-scripts config:type="list">
+    $SNIPPET('spacewalk/sles_register_script')
+  </init-scripts>
+</scripts>
 ----
 +
 [IMPORTANT]
 ====
-When registering with Salt, the Salt key must be accepted on the {productname} Server before
-the autoinstallation procedure could be finished.
+When registering with Salt, the Salt key must be accepted on the {productname} Server before the autoinstallation procedure could be finished.
 ====
+
+For more information about autoinstallation profiles, see xref:reference:systems/autoinst-profiles.adoc[].
 
 
 
