more autoinst tweaks

--- a/modules/client-configuration/pages/autoyast.adoc
+++ b/modules/client-configuration/pages/autoyast.adoc
@@ -75,7 +75,7 @@ You will need to install and configure a PXE server, ensure DHCP is running, and
 
 Upload the {ay} profile to the {productname} Server using the {productname} {webui}.
 
-When the {ay} profile has been created, use the URL from the menu:Autoinstallation Overview[] page as the image location.
+When the {ay} profile has been created, use the URL from the [guimenu]``Autoinstallation Overview`` page as the image location.
 
 For more information about PXE boot, see https://www.suse.com/documentation/sles-15/singlehtml/book_sle_deployment/book_sle_deployment.html#cha.deployment.prep_pxe.
 
