--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -13,18 +13,19 @@ spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<n
 ----
 
 .Procedure
-. Navigate to menu:Systems[Overview], and select the system for the autoinstallation.
+. Navigate to menu:Systems[Overview], and select the system for the automated installation.
 
 . On the systems details page, click menu:Provisioning[Autoinstallation > Schedule] and select the {ay} profile you want to use to (re-)install the system.
 
 
 
 
-(Advanced)
+=== Advanced PXE Installation Configuration
 
 The btn:[Create PXE installation configuration] option can be used if the system should be installed for the first time.
 A PXE boot configuration will be created.
-When you power on the machine it is booting from the network and the correct profile will be selected.
- 
+When you power on the client system it is booting from the network and the correct profile will be selected for installation.
+
 If the system is already managed you can click btn:[Schedule Autoinstallation and Finish] to start the installation.
 
+For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
