--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -21,5 +21,5 @@ The {productname} Server then acts as a TFTP server.
 
 The TFTP environment is generated with a tool called Cobbler.
 Cobbler can also generate a bootable ISO image.
-The ISO image can be used to install machines when PXE boot is not an option; for more information, see (https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/client-configuration/cobbler.html#_build_isos_with_cobbler).
+The ISO image can be used to install machines when PXE boot is not an option; for more information, see xref:client-configuration:cobbler.html#_build_isos_with_cobbler[].
 // Cobbler allows you to automate bare-metal installations.
