--- a/modules/client-configuration/pages/vhm-azure.adoc
+++ b/modules/client-configuration/pages/vhm-azure.adoc
@@ -8,13 +8,37 @@ For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
 
-# Azure related variables
-AZURE_SUBSCRIPTION_ID = "EXAMPLE"
-AZURE_APPLICATION_ID = "EXAMPLE"
-AZURE_TENANT_ID = "EXAMPLE"
-AZURE_SECRET_KEY = "EXAMPLE"
+== Create an Azure VHM
 
 
-The instances running on the Public Cloud that are registered on SUSE Manager, will report the UUID reported by the specific Public Cloud provider:
+The Virtual Host Manager (VHM) runs on the {productname} Server.
 
-Azure: 13f56399-bd52-4150-9748-7190aae1ff21
+To run a VHM, your {productname} Server will need to have port 443 open, in order to access the clients.
+
+Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` package on the {productname} Server.
+
+
+.Procedure: Creating an Azure VHM
+
+. In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
+. Click btn:[Create] and select [guimenu]``Azure`` from the drop-down menu.
+. In the [guimenu]``Add an Azure Virtual Host Manager`` section, use these parameters:
+* In the [guimenu]``Label`` field, type a custom name for your VHM.
+* In the [guimenu]``Subscription ID`` field, type the subscription ID provided by Azure.
+* In the [guimenu]``Application ID`` field, type the application ID provided by Azure.
+* In the [guimenu]``Tenant ID`` field, type the tenant ID provided by Azure.
+* In the [guimenu]``Secret Key`` field, type the secret key associated with the Azure instance.
+* In the [guimenu]``Zone`` field, type the zone to create instances from.
+This is required for subscription matching to work.
+. Click btn:[Create] to save your changes and create the VHM.
+. On the [guimenu]``Virtual Host Managers`` page select the new VHM.
+. On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
+
+To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
+
+
+Instances running on the Azure public cloud will report this UUID to {productname} Server:
+
+----
+13f56399-bd52-4150-9748-7190aae1ff21
+----
