--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -18,21 +18,18 @@ For more information on using a VHM with {k8s}, see xref:client-configuration:vh
 
 
 
-== VHM Setup
+== SUSE Support and VM Zones
 
+Public cloud providers use regions to define the physical geographic location of the datacenter providing virtual machines.
+For example, [systemitem]``US-East``, or [system]``Asia``.
 
-The Virtual Host Manager (VHM) runs on the {productname} Server.
+Regions are then further divided into zones.
+For example, the [systemitem]``US-East`` region might contain zones called [systemitem]``us-east-2a`` and [systemitem]``us-east-2b``, among others.
 
-To run a VHM, your {productname} Server will need to have port 443 open, in order to access the clients.
+{suse} uses the zone of a virtual machine to determine the appropriate subscription to provide.
+If all of your VMs are provided by the same zone, you are within the terms and conditions of the ``1-2 Virtual Machines`` subscription.
 
+If your VMs are provided by different zones, even if they are within the same region, you might not meet the conditions of the ``1-2 Virtual Machines`` subscription.
+In this case, check your subscription carefully.
 
-.Procedure: Creating a VHM
-
-. In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
-. Click btn:[Create] and select the appropriate VHM type from the drop-down menu.
-. In the [guimenu]``Add a Virtual Host Manager`` section, complete the parameters as required for your environment.
-. Click btn:[Create] to save your changes and create the VHM.
-. On the [guimenu]``Virtual Host Managers`` page select the new VHM.
-. On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
-
-To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
+For more information, https://www.suse.com/products/terms_and_conditions.pdf or contact {suse}.
