--- a/modules/client-configuration/pages/vhm-aws.adoc
+++ b/modules/client-configuration/pages/vhm-aws.adoc
@@ -7,6 +7,7 @@ The VHM allows {productname} to obtain and report information about your cluster
 For more information on VHMs, see xref:client-configuration:vhm.adoc[].
 
 
+
 == Create an Amazon EC2 VHM
 
 
@@ -26,7 +27,7 @@ Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` pac
 * In the [guimenu]``Access Key ID`` field, type the access key ID provided by Amazon.
 * In the [guimenu]``Secret Access Key`` field, type the secret access key associated with the Amazon instance.
 * In the [guimenu]``Region`` field, type the region to use.
-* In the [guimenu]``Zone`` field, type the zone to create instances from.
+* In the [guimenu]``Zone`` field, type the zone your VM is located in.
 This is required for subscription matching to work.
 . Click btn:[Create] to save your changes and create the VHM.
 . On the [guimenu]``Virtual Host Managers`` page select the new VHM.
