--- a/modules/client-configuration/pages/vhm-azure.adoc
+++ b/modules/client-configuration/pages/vhm-azure.adoc
@@ -28,7 +28,7 @@ Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` pac
 * In the [guimenu]``Application ID`` field, type the application ID provided by Azure.
 * In the [guimenu]``Tenant ID`` field, type the tenant ID provided by Azure.
 * In the [guimenu]``Secret Key`` field, type the secret key associated with the Azure instance.
-* In the [guimenu]``Zone`` field, type the zone to create instances from.
+* In the [guimenu]``Zone`` field, type the zone your VM is located in.
 This is required for subscription matching to work.
 . Click btn:[Create] to save your changes and create the VHM.
 . On the [guimenu]``Virtual Host Managers`` page select the new VHM.
