--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -31,7 +31,7 @@ Store this file locally on your {productname} Server, and take note of the path.
 * In the [guimenu]``Service Account Email`` field, type the email address associated with your Google account.
 * In the [guimenu]``Cert Path`` field, type the path to the certificate downloaded from the GCE panel.
 * In the [guimenu]``Project ID`` field, type the project ID used by the GCE instance.
-* In the [guimenu]``Zone`` field, type the zone to create instances from.
+* In the [guimenu]``Zone`` field, type the zone your VM is located in.
 This is required for subscription matching to work.
 . Click btn:[Create] to save your changes and create the VHM.
 . On the [guimenu]``Virtual Host Managers`` page select the new VHM.
