--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -29,9 +29,9 @@ ifndef::backend-pdf[]
 *** xref:virt-file.adoc[Virtualization with Other Hosts]
 // VHMs
 ** xref:vhm.adoc[Virtual Host Managers]
-//*** xref:vhm-aws.adoc[VHM and AWS]
-//*** xref:vhm-azure.adoc[VHM and Azure]
-//*** xref:vhm-gce.adoc[VHM and GCE]
+*** xref:vhm-aws.adoc[VHM and AWS]
+*** xref:vhm-azure.adoc[VHM and Azure]
+*** xref:vhm-gce.adoc[VHM and GCE]
 *** xref:vhm-kubernetes.adoc[VHM and Kubernetes]
 //*** xref:vhm-caasp.adoc[VHM and CaaSP]
 //  Client Admin Tasks
@@ -114,11 +114,11 @@ include::modules/client-configuration/pages/virt-file.adoc[leveloffset=+2]
 // VHMs
 include::modules/client-configuration/pages/vhm.adoc[leveloffset=+1]
 
-// include::modules/administration/pages/vhm-azure.adoc[leveloffset=+2]
+include::modules/administration/pages/vhm-azure.adoc[leveloffset=+2]
 
-// include::modules/administration/pages/vhm-aws.adoc[leveloffset=+2]
+include::modules/administration/pages/vhm-aws.adoc[leveloffset=+2]
 
-// include::modules/administration/pages/vhm-gce.adoc[leveloffset=+2]
+include::modules/administration/pages/vhm-gce.adoc[leveloffset=+2]
 
 include::modules/administration/pages/vhm-kubernetes.adoc[leveloffset=+2]
 
