monitoring: fix Prometheus configuration example
Syntax was broken and example did not work

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -157,7 +157,7 @@ It is important to understand how this file is structured.
 For example:
 
 ----
-yaml
+scrape_configs:
 - job_name: 'suse-manager-server'
   static_configs:
     - targets:
