change section title and desc for carity (per feedback)

--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -39,19 +39,20 @@ For more information about the ``Kickstart`` wizard, see xref:reference:systems/
 
 
 
-== Create a Profile
+== Upload a Profile
 
 You provide a label for the profile and select an ``Autoinstallation Tree`` (distribution) that you want to use for this profile.
 
-Virtualization type.
+// Virtualization type.
 // later?  and again kernel options.
 
-Write, or browse and upload the ``Kickstart`` or ``AutoyaST`` profile.
+Upload the ``Kickstart`` or ``AutoyaST`` profile.
+You can either write the profile within the {webui} or create it externally and then upload it.
 
 [NOTE]
 ====
 AutoYaST is able to dump a profile from an existing installation.
-This can be used as template, but needs some adaptions to be usable from {productname}:
+This can be used as template that some adaptions to be usable from {productname}:
 ====
 
 
@@ -77,12 +78,12 @@ You defined the base channel in the distribution already.
 * Register the system after it is installed.
 For this step we provide script snippets that can be used.
 +
-For Salt managed clients, use the `spacewalk/sle_register_salt` snippet:
+For Salt managed clients, use the `spacewalk/minion_script` snippet:
 +
 ----
 <scripts>
   <init-scripts config:type="list">
-    $SNIPPET('spacewalk/sle_register_salt')
+    $SNIPPET('spacewalk/minion_script')
   </init-scripts>
 </scripts>
 ----
