--- a/modules/client-configuration/pages/vhm-aws.adoc
+++ b/modules/client-configuration/pages/vhm-aws.adoc
@@ -30,7 +30,7 @@ Ensure you have installed the [systemitem]``virtual-host-gatherer-libcloud`` pac
 * In the [guimenu]``Zone`` field, type the zone your VM is located in.
 This is required for subscription matching to work.
 . Click btn:[Create] to save your changes and create the VHM.
-. On the [guimenu]``Virtual Host Managers`` page select the new VHM.
+. On the [guimenu]``Virtual Host Managers`` page, select the new VHM.
 . On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
 
 To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
