--- a/modules/client-configuration/pages/vhm-gce.adoc
+++ b/modules/client-configuration/pages/vhm-gce.adoc
@@ -34,7 +34,7 @@ Store this file locally on your {productname} Server, and take note of the path.
 * In the [guimenu]``Zone`` field, type the zone your VM is located in.
 This is required for subscription matching to work.
 . Click btn:[Create] to save your changes and create the VHM.
-. On the [guimenu]``Virtual Host Managers`` page select the new VHM.
+. On the [guimenu]``Virtual Host Managers`` page, select the new VHM.
 . On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
 
 To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
