--- a/modules/client-configuration/pages/vhm.adoc
+++ b/modules/client-configuration/pages/vhm.adoc
@@ -32,4 +32,4 @@ If all of your VMs are provided by the same zone, you are within the terms and c
 If your VMs are provided by different zones, even if they are within the same region, you might not meet the conditions of the ``1-2 Virtual Machines`` subscription.
 In this case, check your subscription carefully.
 
-For more information, https://www.suse.com/products/terms_and_conditions.pdf or contact {suse}.
+For more information, see https://www.suse.com/products/terms_and_conditions.pdf or contact {suse}.
