--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -6,7 +6,7 @@
 This is useful if you need to install a large number of clients.
 
 For {sle} clients, use {ay}.
-When you have created an {ay} file, you can upload and manage it the within {productname} {webui}.
+When you have created an {ay} file, you can upload and manage it using the {productname} {webui}.
 
 For {rhel} clients, use Kickstart.
 Kickstart files are created, modified, and managed within the {productname} {webui}.
