--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -15,7 +15,7 @@ Kickstart files are created, modified, and managed within the {productname} {web
 
 == Basic Concept
 
-It is best practice to boot for installation with Network Boot (PXE Boot).
+We recommend that you use PXE boot for installing clients.
 For this you need a DHCP server that points to your {productname} Server.
 The {productname} Server then acts as a TFTP server.
 
