--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -16,7 +16,7 @@ Kickstart files are created, modified, and managed within the {productname} {web
 == Basic Concept
 
 We recommend that you use PXE boot for installing clients.
-For this you need a DHCP server that points to your {productname} Server.
+PXE booting requires a DHCP server that points to your {productname} Server.
 The {productname} Server then acts as a TFTP server.
 
 The TFTP environment is generated with a tool called Cobbler.
