--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -19,7 +19,7 @@ We recommend that you use PXE boot for installing clients.
 PXE booting requires a DHCP server that points to your {productname} Server.
 The {productname} Server then acts as a TFTP server.
 
-The TFTP environment is generated with a tool called Cobbler.
+The TFTP environment is generated with Cobbler.
 Cobbler can also generate a bootable ISO image.
 The ISO image can be used to install machines when PXE boot is not an option; for more information, see xref:client-configuration:cobbler.html#_build_isos_with_cobbler[].
 // Cobbler allows you to automate bare-metal installations.
