--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -113,7 +113,7 @@ The final state of a profile is composed when a client requests it.
 This allows you using variables in profiles.
 In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can define variables.
 
-Often used variables are:
+Some common variables are:
 
 redhat_management_server::
 the server where you register to (automatically set).
