--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -116,7 +116,7 @@ In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can d
 Some common variables are:
 
 redhat_management_server::
-the server where you register to (automatically set).
+the server {redhat} clients register to (automatically set).
 org::
 the organization ID where this profile is created (automatically set).
 registration_key::
