--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -121,7 +121,7 @@ org::
 the organization ID where this profile is created (automatically set).
 registration_key::
 the key used in the registration snippets.
-When you specify it, you can set the activation key to be used to register the system.
+By specifying this variable, you can set the activation key to be used to register the system.
 dont_register::
 if specified the registration will be skipped.
 allow_config_actions::
