--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -123,7 +123,7 @@ registration_key::
 the key used in the registration snippets.
 By specifying this variable, you can set the activation key to be used to register the system.
 dont_register::
-if specified the registration will be skipped.
+if specified, the registration will be skipped.
 allow_config_actions::
 if set to ``1``, it will allow traditional configuration management (traditional only).
 allow_remote_commands::
