--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -1,5 +1,5 @@
 [[client-cfg-autoinstallation-autoyast]]
-== Start an Autoinstallation with {ay}
+== Autoinstallation with {ay}
 
 To start an autoinstallation the system must be known to {productname} already.
 You can use Bare-metal Provisioning to bring systems into {productname}.
